--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "mobx": "^6.3.6",
+    "mobx-react": "^7.2.1",
     "postcss-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
